# manipulation_project

custom_perception_messages/: CMakeLists.txt  package.xml  setup.cfg
install/: local_setup.sh  setup.sh
install/moveit2_scripts/lib/moveit2_scripts/: gripper_control  pick_and_place  pick_and_place_trajectory
install/moveit2_scripts/share/moveit2_scripts/: local_setup.sh  package.bash  package.sh  package.zsh
install/my_moveit_config/share/my_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.sh  package.xml  (+1 more)
log/: latest_build
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py  single_pick_and_place.launch.py
moveit2_scripts/src/: gripper_control.cpp  pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_real.cpp  pick_and_place_trajectory.cpp  single_pick_and_place_trajectory.cpp
object_detection/: package.xml  setup.py
object_detection/config/: rviz_perception_config.rviz  rviz_perception_real_config.rviz
object_detection/launch/: object_detection.launch.py  object_detection_real.launch.py
object_detection/object_detection/: object_detection.py  object_detection_real.py  static_transform_publisher.py  static_transform_publisher_real.py
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  name.srdf
real_moveit_config/launch/: move_group.launch.py
(+3 files in other folders)
